2005-10-17  Michael Albinus  <michael.albinus@gmx.de>

	* tramp.el (tramp-completion-mode): New defvar.  Used in
	`tramp-completion-mode' for checking if we are in completion mode.
	(tramp-completion-handle-file-name-all-completions): Reorder code
	in order to complete for file names only in case there are no
	method/user/host completions.  This is necessary for cooperation
	with ido.  Reported by Kim F. Storm <storm@cua.dk>.

2005-10-08  Lars Hansen  <larsh@soem.dk>

	* tramp.el (tramp-perl-directory-files-and-attributes): Add error
	handling.
	(tramp-handle-directory-files-and-attributes): Handle perl error
	msg.

2005-10-11  Steve Youngs  <steve@sxemacs.org>

	* tramp.el: Require `timer-funcs' instead of `timer' if in
	XEmacs.

2005-10-09  Michael Albinus  <michael.albinus@gmx.de>

	* tramp.el (tramp-md5-function): Fix typo in error message.

2005-10-08  Michael Albinus  <michael.albinus@gmx.de>

	Version 2.0.51 released.

2005-10-02  Richard M. Stallman  <rms@gnu.org>

	* tramp.el: Pacify byte compiler warnings in pacification code.
	(tramp-handle-file-local-copy): Use insert-buffer-substring.

2005-09-18  Michael Albinus  <michael.albinus@gmx.de>

	* tramp.el (tramp-login-prompt-regexp): Expand regexp in order to
	cover prompts like "login as:".  Reported by Slawomir Nowaczyk
	<slawomir.nowaczyk.847@student.lu.se>.

2005-09-07  Michael Albinus  <michael.albinus@gmx.de>

	* tramp.el (tramp-action-password, tramp-multi-action-password):
	Compile the password prompt from `method', `user' and `host'.
	Sometimes it isn't obvious which password to enter, for example
	with remote files offered by recentf.el, or with multiple steps.
	Suggested by Robert Marshall <robert@chezmarshall.freeserve.co.uk>.

2005-09-03  Michael Albinus  <michael.albinus@gmx.de>

	* tramp.el (tramp-handle-set-visited-file-modtime)
	(tramp-handle-insert-file-contents)
	(tramp-handle-write-region): Insert special handling for
	`last-coding-system-used' again, it still seems to be